# TKU_Assignments

./: .gitmodules  README.md  grade_filter.js
112-1/Discrete_Mathematics/: cashier.py  seq.js
112-2/Computer_Programming/: run.sh
112-2/other/: w7.txt
113-1/Database/: docker_sql-server.sh  sql_driver.sh
113-1/Database/final_report/: DDL_finance_department.sql  delete_data.sql  insert_data.sql  pyproject.toml  schema.dbml  select_data.sql  sql.ipynb  sql_connect.py  triggers.sql  view.sql
113-1/Logical_Design/: 32_bits_Adder.cdl  HW1.circ  Logic_Design_HW2_412770116.cdl  test.circ
113-1/Statistics/: week4.py  week5.py
113-2/Algorithm/: binary_search.py  fibonacci.py  floyd.py  kruskal.py  merge_sort.py  quick_sort.py  week13_dp.py
113-2/Data_Analysis/: array.r  dataframe.r  hw4.r  matrix.r  vector.r  week10.r  week10_hw.r  week11.r  week12.r  week13.r  week14.r  week15.r  week16.r  week4.r  week6.r  week6_function.r  week7.r  week8_hw.r
113-2/Investment/: HPR.py
114-1/Embedded_System/: w4.md
114-1/Linux_OS/: note.md
114-1/Python/: input.txt  test.py
114-2/Linux/: final_project.md
114-2/NLP/: .env  .gitignore  app.py  pyproject.toml
AI_lab/412770116_許嘉隆_20230912_課堂作業/: index.html  style.css
AI_lab/412770116_許嘉隆_20230919_課堂作業/: index.html  style.css
AI_lab/412770116_許嘉隆_20230926_課堂作業/: index.html  nav.css  nav.html
Computer_Programming_1/: ex3.drawio  grade.drawio
Discrete_Mathematics/: cashier.js
hw1/: 412770116_許嘉隆_20230912_課堂作業.html  style.css
others/: grade_filter.js  iclass_resource_selector.js  mean_score.js
(+360 files in other folders)
