[tool.poetry]
name = "final-report"
version = "0.1.0"
description = ""
authors = ["JiaLong0209 <smt02091395@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.1"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
pyodbc = "^5.2.0"
ipykernel = "^6.29.5"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
